# ClaimGuard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  claim_guard_开源项目策划书.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
agentclaimguard/adapters/: __init__.py
agentclaimguard/adapters/dspy/: __init__.py
agentclaimguard/adapters/langchain/: __init__.py  runnable.py  types.py
agentclaimguard/adapters/langgraph/: __init__.py  node.py  types.py
agentclaimguard/core/: __init__.py  claim.py  policy.py  result.py  runtime.py  verifier.py
agentclaimguard/extractors/: __init__.py  claims.py  templates.py
agentclaimguard/policies/: generic_rag.yaml  generic_strict.yaml
agentclaimguard/server/: main.py  schemas.py
agentclaimguard/utils/: ids.py  json_schema.py
agentclaimguard/validators/: __init__.py  citation_binding.py  conflict_check.py  evidence_required.py  forbidden_verdict.py  tool_required.py
claimguard/adapters/dify/: __init__.py
claimguard/adapters/langchain/: __init__.py
claimguard/adapters/langgraph/: __init__.py
claimguard/adapters/ragflow/: __init__.py
claimguard/core/: __init__.py  evidence.py  policy.py  runtime.py  tool_result.py  verifier.py
claimguard/policies/: generic_compliance.yaml  generic_numeric.yaml  generic_strict.yaml
claimguard/server/: main.py  schemas.py
claimguard/utils/: json_schema.py  yaml_loader.py
claimguard/validators/: __init__.py  citation_binding.py  conflict_check.py  evidence_required.py  forbidden_verdict.py  tool_required.py
docs/: adapters.md  concepts.md  examples.md  policy_spec.md  project_plan_zh.md  quickstart.md  release_checklist.md  roadmap.md  schema_spec.md  troubleshooting.md  vision.md
examples/claim_extraction/: README.md  demo.py
examples/compliance_judgement/: demo.py  policy.yaml  sample_input.json
examples/dify_http_tool/: README.md  request.json  response_blocked.json
examples/langchain_guard/: README.md  demo.py
examples/langgraph_guard/: README.md  demo.py
examples/numeric_conclusion/: policy.yaml  sample_input.json
examples/rag_citation/: demo.py  policy.yaml  sample_input.json
examples/ragflow_evidence/: README.md  demo.py  evidence.json  retrieved_chunks.json
tests/: test_citation_binding.py  test_claim_extraction.py  test_evidence_required.py  test_fallback.py  test_langchain_adapter.py  test_langgraph_adapter.py  test_policy_loader.py  test_server.py  test_tool_required.py
