[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claimguard"
version = "0.1.0"
description = "A framework-agnostic evidence gate for LLM claims."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "ClaimGuard contributors" }
]
keywords = ["llm", "rag", "agent", "verification", "guardrails", "evidence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["claimguard"]

[tool.hatch.build.targets.wheel.force-include]
"claimguard/policies" = "claimguard/policies"

[tool.ruff]
line-length = 88
target-version = "py310"
