[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentclaimguard"
version = "0.3.1"
description = "A framework-agnostic evidence gate for LLM agent claims."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Hao Peng" }
]
keywords = ["llm", "rag", "agent", "verification", "guardrails", "evidence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/konoeph/AgentClaimGuard"
Repository = "https://github.com/konoeph/AgentClaimGuard"
Issues = "https://github.com/konoeph/AgentClaimGuard/issues"
Changelog = "https://github.com/konoeph/AgentClaimGuard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]
langgraph = [
  "langgraph>=0.2",
]
langchain = [
  "langchain-core>=1.0",
]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]
release = [
  "build>=1.2",
  "twine>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["agentclaimguard"]

[tool.ruff]
line-length = 88
target-version = "py310"
